# notebooks-ilsenburg

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
elastic-mill-spring/: data_input.py  elastic_mill_spring.ipynb  flow_stress.py
flat-rolling/: pyroll-flat-rolling.ipynb  requirements.txt
flow-stress/: Freiberg.ipynb  LutonSellarsHotFlowStressModelling.ipynb  NeuralNetwork.ipynb  SellarsTegart.ipynb  bst.csv  requirements.txt
roll-flattening/: roll_flattening_hitchcock.ipynb
roll-flattening/heights_clad/: data_input.py  flow_stress.py  force_feb.py  heights.py
