[project]
name = "notebooks-flow-stress"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter",
    "jupytext",
    "numpy~=2.0",
    "plotly~=5.0",
    "scipy~=1.15",
    "pandas~=2.0",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = [
    "pre-commit~=4.1.0",
]
