[project]
name = "notebooks-ilsenburg"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy~=2.0",
    "plotly~=6.0",
    "scipy~=1.15",
    "pandas~=2.0",
    "scikit-learn~=1.6",
    "pyroll-basic>=3.1.0",
]

[dependency-groups]
dev = [
    "jupyter",
    "jupytext",
    "pre-commit~=4.1.0",
]
